# ml-cookbook

./: .gitignore  Dockerfile  LICENSE  README.md  ReadMe.md  launch.sh  pyproject.toml  requirements.txt
.ipynb_checkpoints/: numpy-checkpoint.ipynb
bioinformatics/: Research.md
bioinformatics/chemistry/: RDKit.ipynb  chempy.ipynb
bioinformatics/research/: assays.ipynb  ehrs.ipynb
bioinformatics/rosalind/: ReadMe.md
bioinformatics/rosalind/stronghold/: complements.ipynb  nucleotides.ipynb  transcription.ipynb  wabbits.ipynb
bioinformatics/rosalind/stronghold/data/: rosalind_count.txt  rosalind_transcribe.txt
book/: README.md
design-system/: package-lock.json  package.json
hands-on-ml/: chapter-1.ipynb  numpy.ipynb
hands_on_ml/: Chapter-1.ipynb
hands_on_ml/.ipynb_checkpoints/: Chapter-2-checkpoint.ipynb
languages/: java.ipynb
languages/Python/: scikit-learn.ipynb
languages/ROS/: README.md  ReadMe.md
languages/assembly/: app  assembly.ipynb  chips.ipynb  hello.s  nvidia_mkcap
languages/c++/: README.md  note.txt  notes.ipynb
languages/c++/.ipynb_checkpoints/: note-checkpoint.txt
languages/c++/simple-app/: a.out  hello.cpp  prime.cpp
languages/java/: ReadMe.md  java-notes.ipynb  notes.ipynb
languages/python/: ReadMe.md  charts.ipynb  llms.ipynb  numpy.ipynb  scikit.ipynb  tensorflow.ipynb
languages/python/configs/: fontlist-v390.json  scikit.py
languages/python/data/: macros.xlsx
languages/python/web_frameworks/: FastAPI.txt  Flask.txt
languages/r/: ReadMe.md  notes.ipynb  r-notes.ipynb
languages/rust/: ReadMe.md  crab_meat.ipynb
languages/rust/project/: Cargo.toml
languages/rust/project/src/: main.rs
languages/sql/: ReadMe.md  db-connect.ipynb
languages/typescript/: Intro.ipynb  README.md  ReadMe.md  app.js  app.ts
languages/typescript/web_frameworks/: Preact.txt  Thanos.txt  Vue.txt
robotics/fanuc/: fanuc.ipynb
robotics/fanuc/settings/: config.py
robotics/tesla/: tesla.ipynb
robotics/tesla/settings/: config.py
