[tool.poetry]
name = "ml-cookbook"
version = "0.1.0"
description = ""
authors = ["Preston Mackert"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.4.3"
numpy = "^1.23.1"
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
